--- a/css/sobre-nos/whatWeDo.css
+++ b/css/sobre-nos/whatWeDo.css
@@ -6,7 +6,7 @@
 
 .whatWeDo__img{
     /* Trocar as Imagens */
-    background: url(../../img/sobre-nos/caminhao2.jpg) no-repeat center;
+    background: url(../../img/sobre-nos/truck02.jpg) no-repeat center;
     width: 100%;
     height: 536px;
     padding: 0;
