--- a/css/sobre-nos/aboutUs.css
+++ b/css/sobre-nos/aboutUs.css
@@ -20,6 +20,9 @@
     text-align: center;
     opacity: 0;
     animation: slide-down 1s 0.8s cubic-bezier(.2,.7,.4,1.2) forwards;
+    -webkit-animation: slide-down 1s 0.8s cubic-bezier(.2,.7,.4,1.2) forwards;
+    -moz-animation: slide-down 1s 0.8s cubic-bezier(.2,.7,.4,1.2) forwards;
+    -o-animation: slide-down 1s 0.8s cubic-bezier(.2,.7,.4,1.2) forwards;
 }
 
 .aboutUs__subtitle{
@@ -30,6 +33,9 @@
     text-align: center;
     opacity: 0;
     animation: slide-down 1s 1.6s cubic-bezier(.2,.7,.4,1.2) forwards;
+    -webkit-animation: slide-down 1s 1.6s cubic-bezier(.2,.7,.4,1.2) forwards;
+    -moz-animation: slide-down 1s 1.6s cubic-bezier(.2,.7,.4,1.2) forwards;
+    -o-animation: slide-down 1s 1.6s cubic-bezier(.2,.7,.4,1.2) forwards;
 }
 
 
