--- a/css/sobre-nos/ourGoal.css
+++ b/css/sobre-nos/ourGoal.css
@@ -2,6 +2,9 @@
     margin: 5rem 0;
     opacity: 0;
     animation: slide-down 1s 4s cubic-bezier(.2,.7,.4,1) forwards;
+    -webkit-animation: slide-down 1s 4s cubic-bezier(.2,.7,.4,1) forwards;
+    -moz-animation: slide-down 1s 4s cubic-bezier(.2,.7,.4,1) forwards;
+    -o-animation: slide-down 1s 4s cubic-bezier(.2,.7,.4,1) forwards;
 }
 
 .ourGoal__title{
