--- a/css/index/blog.css
+++ b/css/index/blog.css
@@ -57,11 +57,15 @@
 .blog__item {
     transition: var(--t-generic);
     -webkit-transition: var(--t-generic);
+    -moz-transition: var(--t-generic);
+    -o-transition: var(--t-generic);
 }
 
 .blog__item:hover {
     transform: scale(1.05);
     -webkit-transform: scale(1.05);
+    -moz-transform: scale(1.05);
+    -o-transform: scale(1.05);
 }
 
 @media (max-width: 767.98px) {
