--- a/css/index/explanation.css
+++ b/css/index/explanation.css
@@ -50,6 +50,8 @@
     left: 50%;
     transform: translate(-50%, -50%);
     -webkit-transform: translate(-50%, -50%);
+    -moz-transform: translate(-50%, -50%);
+    -o-transform: translate(-50%, -50%);
     color: var(--base);
 }
 
