--- a/css/index/quotation.css
+++ b/css/index/quotation.css
@@ -16,6 +16,9 @@
     font-size: var(--px36);
     text-align: center;
     animation: slide-down 2s 0.8s cubic-bezier(.2,.7,.4,1.2) forwards;
+    -webkit-animation: slide-down 2s 0.8s cubic-bezier(.2,.7,.4,1.2) forwards;
+    -moz-animation: slide-down 2s 0.8s cubic-bezier(.2,.7,.4,1.2) forwards;
+    -o-animation: slide-down 2s 0.8s cubic-bezier(.2,.7,.4,1.2) forwards;
 }
 
 .quotation__subtitle {
@@ -29,6 +32,9 @@
     margin: 0 auto;
     max-width: 650px;
     animation: slide-down 2s 1.6s cubic-bezier(.2,.7,.4,1.2) forwards;
+    -webkit-animation: slide-down 2s 1.6s cubic-bezier(.2,.7,.4,1.2) forwards;
+    -moz-animation: slide-down 2s 1.6s cubic-bezier(.2,.7,.4,1.2) forwards;
+    -o-animation: slide-down 2s 1.6s cubic-bezier(.2,.7,.4,1.2) forwards;
 }
 
 
