--- a/css/input.css
+++ b/css/input.css
@@ -20,8 +20,10 @@
     font-size: var(--px18);
     border-radius: 4px;
     border-color: var(--accent-3);
-    padding: var(--px16);
+    padding: var(--px8);
     color: var(--accent-6);
+
+    position: relative !important;
 }
 .generic__form__input::placeholder{
     color: var(--accent-4);
@@ -35,6 +37,7 @@
 .form-check{
     display: flex;
     align-items: center;
+    padding-left: 2.25rem;
 }
 
 .form-check .generic__form__label{
@@ -56,7 +59,7 @@
 
 .generic__form__btn{
     margin-top: var(--px24);
-    padding: var(--px16) var(--px32);
+    padding: var(--px8) var(--px16);
     background: var(--base);
     color: var(--accent-0);
     font-size: var(--px18);
@@ -65,6 +68,8 @@
     box-shadow: 1px 1px 0px rgba(0, 0, 0, 0.5);
     transition: var(--t-btn);
     -webkit-transition: var(--t-btn);
+    -moz-transition: var(--t-btn);
+    -o-transition: var(--t-btn);
 }
 
 .generic__form__btn.--white{
@@ -83,6 +88,8 @@
 .generic__form__btn:hover {
     transform: translate(-5px, -5px) !important;
     -webkit-transform: translate(-5px, -5px) !important;
+    -moz-transform: translate(-5px, -5px) !important;
+    -o-transform: translate(-5px, -5px) !important;
     box-shadow: 5px 5px 0px rgba(0, 0, 0, 1);
     color: var(--accent-0);
 }
@@ -90,13 +97,26 @@
 .generic__form__btn:active {
     transform: translate(0, 0) !important;
     -webkit-transform: translate(0, 0) !important;
+    -moz-transform: translate(0, 0) !important;
+    -o-transform: translate(0, 0) !important;
     box-shadow: 2px 2px 0px rgba(0, 0, 0, 1);
     color: var(--accent-0);
 }
 
-textarea::placeholder{
-    color: red;
+/* Mostrar a senha */
+
+.showPassword{
+    position: relative;
 }
+
+.showPassword__eye{
+    position: absolute;
+    right: var(--px8);
+    top: 50%;
+    transform: translateY(-50%);
+}
+
+/* --- */
 
 
 @media (max-width: 767.98px) {
