--- a/css/sobre-nos/whoWeAre.css
+++ b/css/sobre-nos/whoWeAre.css
@@ -2,6 +2,9 @@
     margin: var(--px32) 0 5rem 0;
     opacity: 0;
     animation: slide-down 1s 2.4s cubic-bezier(.2,.7,.4,1) forwards;
+    -webkit-animation: slide-down 1s 2.4s cubic-bezier(.2,.7,.4,1) forwards;
+    -moz-animation: slide-down 1s 2.4s cubic-bezier(.2,.7,.4,1) forwards;
+    -o-animation: slide-down 1s 2.4s cubic-bezier(.2,.7,.4,1) forwards;
 }
 
 .whoWeAre__title{
